styles.css
:root {
    --base: #091319FF;
    --neutral: #9fb9d0FF;
    --secondary: #94a0a9FF;
    --accent: #b387faFF;
    --outline: #1b262cFF;
}

html {
  scroll-behavior: smooth;
}

* {
    font-family: monospace;
    background-color: var(--base);
    color: var(--neutral);
}

body {
    font-size: 1rem;
}

p {
    margin: 1.8rem 0;
}

h1 {
    font-size: 1.6rem;
}

h2 {
    font-size: 1.4rem;
    color: var(--accent);
}

a {
    text-decoration: none;
    opacity: 0.9;
}

a:hover, a:focus {
    color: var(--accent);
    opacity: 1;
}

hr {
    border: none;
    border-top: dotted 0.4rem var(--outline);
    margin: 2.4rem 0;
}

.content {
    max-width: 60rem;
    margin: 0 auto;
    padding: 2.4rem 5rem;
}

.header {
    display: flex;
    justify-content: space-between;
    position: sticky;
    top: 0;
    background-color: var(--base);
    padding: 0 0 0.6rem 0;
    z-index: 99;
}

.title {
    color: var(--accent);
}

.work {
    margin-top: -1rem;
}

.project-header {
    display: flex;
    justify-content: space-between;
    margin-top: 2.4rem;
}

.project-title {
    color: var(--accent);
}

.project-detail {
    color: var(--secondary);
    font-weight: normal;
    font-style: italic;
    font-size: 1.2rem;
}

.project-description {
    margin: 0.8rem 0;
}

.link {
    display: flex;
    margin: 1.4rem 0;
}

.link a {
    color: var(--accent);
}

.footer {
    color: var(--secondary);
    font-style: italic;
}

